# better-uptime

./: .gitignore  docker-compose.yml
api/: Cargo.toml
api/src/: auth.rs  jwt.rs  main.rs  monitor.rs  password.rs  request_inputs.rs  request_outputs.rs  worker.rs
api/src/routes/: user.rs  website.rs
store/: Cargo.toml
store/migrations/2026-02-02-173600-0000_create_users_and_websites/: up.sql
store/migrations/2026-02-03-102849-0000_create_users_update_websites/: up.sql
store/migrations/2026-02-06-200126-0000_add_unique_username/: down.sql  up.sql
store/migrations/2026-02-09-190006-0000_add_monitoring_fields/: down.sql  up.sql
store/src/: config.rs  lib.rs  password.rs  schema.rs  store.rs
store/src/models/: check_history.rs  mod.rs  user.rs  website.rs
