[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.12"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.49.0", features = ["full"]}
store = {path= "../store"}
envy = "0.4.2"
dotenvy = "0.15.7"
jsonwebtoken = "9.3"
chrono = {version = "0.4", features = ["serde"]}